update on the website

--- a/aboutme.html
+++ b/aboutme.html
@@ -35,7 +35,7 @@
 
 <div class="row1">
 <div class="photo">
-  <img src="images/squares.JPG" alt="bridge" class="squares"/>
+  <img src="images/squares.jpg" alt="bridge" class="squares"/>
 </div>
 
 <div class="para">
