--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
   <h3>Cornell DEBUT BME Project Team</h3>
     <em>June 2018 - Present</em> <br>
     <strong>What:</strong> Developing innovative <mark>biomedical technology</mark> for the DEBUT competition. <br>
-    <strong>Currently:</strong> Working as an Operations Analyst to analyze materials, marketability, and patenability of the device. <br>
+    <strong>Currently:</strong> Working as an Operations Analyst to analyze materials, marketability, and patentability of the device. <br>
     <a href="https://cornelldebut.org/" target="_blank"><button type="button">Learn More</button></a>
   </div>
 
