--- a/art.html
+++ b/art.html
@@ -44,7 +44,7 @@
   <div class="box box4">
   <h3>AP Studio Art 2-D Design Portfolio </h3>
     <em>September 2016 - May 2017 </em><br>
-    <p><strong>Description:</strong> In senior year of high school, I submitted an art portfolio that showcased my 2-D skills. Half of the pieces focused on breadth, and the other half focused on a central theme. I wanted my pieces embody my Asian American experience by creating pieces that I eat in my everyday life. It is difficult as a <mark>Chinese American</mark> to fully understand my identity because it is easy to feel like an outsider in America and China. The presence of staples to life, such as food, shows that culture and ethnicity is evolving to encompass those who belong to more than one nationality. To the right is just a couple of pieces from the portfolio.<br></p>
+    <p><strong>Description:</strong> In senior year of high school, I submitted an art portfolio that showcased my 2-D skills. Half of the pieces focused on breadth, and the other half focused on a central theme. I wanted my pieces embody my Asian American experience by creating pieces that I eat in my everyday life. It is difficult as a <mark>Chinese American</mark> to fully understand my identity because it is easy to feel like an outsider in America and China. The presence of staples to life, such as food, shows that culture and ethnicity is evolving to encompass those who belong to more than one nationality. To the right are a couple of pieces from the portfolio.<br></p>
     <strong>Score:</strong> 5 <br>
   </div>
 
