updated the logo

--- a/index copy.html
+++ b/index copy.html
@@ -13,7 +13,7 @@
 
   <div class="row top">
     <div>
-      <a href="index.html"><p class="logo"><strong>sophia zhang</strong></p></a>
+      <a href="index.html"><img src="images/S.png" alt="logo" class="logo"/></a>
     </div>
 
     <div class="box box1">
