--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
 <body>
   <div class="row top">
     <div>
-      <a href="index.html"><p class="logo"><strong>sophia zhang</strong></p></a>
+       <a href="index.html"><img src="images/S.png" alt="logo" class="logo"/></a>
     </div>
 
   <div class="box box1">
