--- a/projects.html
+++ b/projects.html
@@ -37,9 +37,9 @@
 <div class="row2">
   <div class="box box4">
   <h3>Cornell DEBUT BME Project Team</h3>
-    <em>June 2018 - Present</em> <br>
-    <strong>What:</strong> Developing innovative <mark>biomedical technology</mark> for the DEBUT competition. <br>
-    <strong>Currently:</strong> Working as an Operations Analyst to analyze materials, marketability, and patentability of the device. <br>
+    <em>June 2018 - Present</em>
+    <p><strong>What:</strong> Developing innovative <mark>biomedical technology</mark> for the DEBUT competition. <br>
+    <strong>Currently:</strong> Working as an Operations Analyst to analyze materials, marketability, and patentability of the device.</p>
     <a href="https://cornelldebut.org/" target="_blank"><button type="button">Learn More</button></a>
   </div>
 
@@ -52,8 +52,8 @@
   <div class="box box4">
     <h3>Zendoscope</h3>
     <em> June 2018 - Present </em><br>
-    <strong>What:</strong> Start-Up Company <br>
-    <strong>Currently:</strong> Developing a <mark>cheap</mark> larygnoscope for low-resource countries. <br>
+    <p><strong>What:</strong> Start-Up Company <br>
+    <strong>Currently:</strong> Developing a <mark>cheap</mark> larygnoscope for low-resource countries. </p>
     <a href="https://docs.google.com/presentation/d/17kvLq6zViMoTlfCswy9UJnZhNL2UIVGUn-8DPEheV74/edit?usp=sharing" target="_blank"><button type="button">Learn More</button></a>
   </div>
   <div class="box">
@@ -66,9 +66,9 @@
 <div class="box box4">
   <h3>Cornell University Sustainable Design (CUSD): Currents Subteam</h3>
     <em> September 2018 - Present </em><br>
-    <strong>What:</strong> Sustainable high-efficiency heating, ventilation, and air conditioning (HVAC)<br>
+    <p><strong>What:</strong> Sustainable high-efficiency heating, ventilation, and air conditioning (HVAC)<br>
     <strong>Currently:</strong>
-      Working with the Currents team to create high-efficiency heating, ventilation, and air conditioning (HVAC) sensors. Using technologies, such as machine learning, smartphone applications, data collection to develop a <mark>sustainable system</mark> for Cornell University. <br>
+      Working with the Currents team to create high-efficiency heating, ventilation, and air conditioning (HVAC) sensors. Using technologies, such as machine learning, smartphone applications, data collection to develop a <mark>sustainable system</mark> for Cornell University. </p>
     <a href="https://cusd.cornell.edu/" target="_blank"><button type="button">Learn More</button></a>
 </div>
 
@@ -83,8 +83,8 @@
 <div class="box">
   <h3>Cognitive Neuroscience Lab</h3>
     <em> September 2018 - Present </em><br>
-    <strong>What:</strong> Aimed to understand evolution, acquisition, and processing of language. <br>
-    <strong>Currently:</strong> Assisting PhD students on their experiments with human subjects by coding and data analysis.<br>
+    <p><strong>What:</strong> Aimed to understand evolution, acquisition, and processing of language. <br>
+    <strong>Currently:</strong> Assisting PhD students on their experiments with human subjects by coding and data analysis.</p>
     <a href="http://cnl.psych.cornell.edu/" target="_blank"><button type="button">Learn More</button></a>
 </div>
 <div class="box">
@@ -99,11 +99,11 @@
 <div class="row2">
 <div class="box">
   <h3>Discovering Molecules that Contribute to Cryptococcus neoformans Virulence</h3>
-    <strong>Where:</strong> City College of New York <br>
+    <p><strong>Where:</strong> City College of New York <br>
     <strong>When:</strong> July 2016 - December 2016 <br>
     <strong>What:</strong> Dr. Stark's Lab in City College of New York <br>
     <strong>Background:</strong>
-      I characterized the molecular architecture of melanized fungal cells by using NMR techniques. I won first place at the New York City Science and Engineering Fair and third place at JSHS competition.<br>
+      I characterized the molecular architecture of melanized fungal cells by using NMR techniques. I won first place at the New York City Science and Engineering Fair and third place at JSHS competition.</p>
     <a href="https://docs.google.com/document/d/1Znl7blWrI6kgVVcgQcX_iTygpUxNE5vHQuZzwuJUAdA/edit?usp=sharing" target="_blank"><button type="button">Learn More</button></a>
 </div>
 <div class="box">
@@ -116,11 +116,11 @@
 <div class="row2">
 <div class="box box4">
   <h3>K63 as a Regulator in the G1 Phase of the Cell Cycle</h3>
-    <strong>Where:</strong> New York University <br>
+    <p><strong>Where:</strong> New York University <br>
     <strong>When:</strong> July 2015 - August 2015 <br>
     <strong>What:</strong> Applied Research Innovations Science Engineering Program<br>
     <strong>Background:</strong>
-    I researched on the regulation of ubiquitinated proteins during the cell cycle phases by using Western Blots. I presented the project with another student at a symposium in New York University. <br>
+    I researched on the regulation of ubiquitinated proteins during the cell cycle phases by using Western Blots. I presented the project with another student at a symposium in New York University. </p>
     <a href="https://docs.google.com/document/d/18MnVmf8VXGk0Whnk42xPCQbCk9oIkZeZEuBAUFcnhRw/edit?usp=sharing" target="_blank"><button type="button">Learn More</button></a>
 </div>
 <div class="box">
