--- a/design.html
+++ b/design.html
@@ -44,6 +44,9 @@
     <p><strong>Description:</strong> Learned HTML, CSS, and Javascript. Learned how to design websites with target audiences. </p>
     <p><strong>Project 1:</strong> This website was entirely designed by HTML, CSS, and Javascript.</p>
     <p><strong>Project 2 & 3:</strong> Redesign the Apple Harvest Festival Website. I implemented user-friendly mobile pages.</p>
+    <h3>User Research</h3>
+        <p> The Apple Harvest Festival's original website was cluttered and had too much information on it. I re-formatted
+            the website by 
     <div class=images>
       <img src="images/apple1.jpg" alt="apple_webpage" class="news1"/>
         <img src="images/applem1.jpg" alt="apple_mobile" class="news1">
