added user research

--- a/art.html
+++ b/art.html
@@ -36,9 +36,9 @@
 </div>
 
     <div class="art">
-      <p><strong>Skills:</strong> acrylic/oil/watercolor painting, pencil sketching, color pencils, graphic design, pen sketches </p> <br>
+      <p><strong>Skills:</strong> acrylic/oil/watercolor painting, pencil sketching, color pencils, graphic design, pen sketches </p>
       <p><strong>Awards:</strong> Honorable Mention for World Journal Landscape Contest,
-          Honorable Mention for World Journal Mother’s Day Poster Contest, 2nd place for US Census Poster Contest, 3rd place for Key Club Scrapbook Contest, and 1st place for Key Club Poster Contest. </p><br>
+          Honorable Mention for World Journal Mother’s Day Poster Contest, 2nd place for US Census Poster Contest, 3rd place for Key Club Scrapbook Contest, and 1st place for Key Club Poster Contest. </p>
     </div>
 
 <div class="row2">
