--- a/design.html
+++ b/design.html
@@ -46,7 +46,8 @@
     <p><strong>Project 2 & 3:</strong> Redesign the Apple Harvest Festival Website. I implemented user-friendly mobile pages.</p>
     <h3>User Research</h3>
         <p> The Apple Harvest Festival's original website was cluttered and had too much information on it. I re-formatted
-            the website by 
+            the website by adding simpler and more obvious functions for the general audience to navigate. The interactivity
+            of the website is to help increase engagement and interest with the website. </p>
     <div class=images>
       <img src="images/apple1.jpg" alt="apple_webpage" class="news1"/>
         <img src="images/applem1.jpg" alt="apple_mobile" class="news1">
@@ -61,6 +62,10 @@
       <img src="images/apple6.jpg" alt="apple_webpage" class="news1"/>
     </div>
     <p><strong>Project 4:</strong> Created a website with a group of 4 people for the Terrace Restaurant at Cornell University.</p>
+    <h3>User Research</h3>
+        <p> Contacted the manager of Terrace Restaurant and asked for any specific asserts the manager would like on the website.
+            Website pages are designed to help students understand how to order food at the restaurant. We wanted to increase attention to
+            the workers at the restaurant and acknowledge the hard work that they do for Cornell. </p>
     <div class=images>
       <img src="images/terrace1.jpg" alt="terrace_webpage" class="news1"/>
         <img src="images/terracem1.jpg" alt="terrace_mobile" class="news1">
