--- a/contact.html
+++ b/contact.html
@@ -68,6 +68,8 @@
 
 </section>
 
+<p>You can also directly email me as well!</p>
+
 <div class="footer">
   <p class="email">
     <a href="mailto:sjz35@cornel.edu" target="_blank"><img class="icon" src="images/email.png" alt="email"/></a>
