--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,6 @@
   <meta charset = "UTF-8">
   <title>Sophia Zhang</title>
 
-  <!---  <link rel="stylesheet" type="text/css" href="styles/v1.css" media="all"> --->
-
   <link rel="stylesheet" type="text/css" href="styles/v2.css" media="all">
   <script src="scripts/jquery-3.3.1.min.js" type="text/javascript"></script>
   <script src="scripts/validation.js" type="text/javascript"></script>
@@ -68,11 +66,11 @@
 
 </section>
 
-<p>You can also directly email me as well!</p>
+<p class=contact>*You can also directly email me as well!*</p>
 
 <div class="footer">
   <p class="email">
-    <a href="mailto:sjz35@cornel.edu" target="_blank"><img class="icon" src="images/email.png" alt="email"/></a>
+    <a href="mailto:sjz35@cornell.edu" target="_blank"><img class="icon" src="images/email.png" alt="email"/></a>
     <a href="https://www.linkedin.com/in/zsophia" target="_blank"><img class="icon" src="images/linked.png" alt="linked"/></a>
   </p>
 </div>
