--- a/design.html
+++ b/design.html
@@ -35,6 +35,23 @@
   <strong>Adobe Creative Cloud:</strong> photoshop, lightroom, illustrator, indesign
 </div>
 
+
+<div class="row2">
+    <div class="box box5">
+    <h3>INFO 2300: Intermediate Design and Programming for the Web </h3>
+    <em>Spring 2019</em>
+    <p><strong>Description:</strong>Learned PHP and SQL. </p>
+    <p><strong>Project 1:</strong> Created a website about Flushing, Queens, my hometown. </p>
+    <h3>User Research</h3>
+        <p> </p>
+    <div class=images>
+        <img src="images/flushing1.jpg" alt="flushing_webpage" class="news1"/>
+        <img src="images/flushing2.jpg" alt="flushing_webpage" class="news1"/>
+        <img src="images/flushing3.jpg" alt="flushing_webpage" class="news1"/>
+    </div>
+</div>
+</div>
+
 <div class="row2">
   <div class="box box5">
   <h3>INFO 1300: Introduction to Web Design </h3>
@@ -102,24 +119,6 @@
     </div>
   </div>
 </div>
-
-<div class="row2">
-  <div class="box box5">
-  <h3>Hunter's Key Newsletters</h3>
-    <em>September 2015 - May 2016</em><br>
-    <p><strong>Description:</strong> I was the Key Club Bulletin Editor and I was in charge of creating newsletters. I created the first ever Hunter's Key, which is the name of the current newsletter at Hunter College High School. <br></p>
-  <div class=images>
-    <img src="images/news1.jpg" alt="newsletter" class="news"/>
-    <img src="images/news6.jpg" alt="newsletter" class="news"/>
-    <img src="images/news7.jpg" alt="newsletter" class="news"/>
-    <img src="images/news8.jpg" alt="newsletter" class="news"/>
-    <img src="images/news9.jpg" alt="newsletter" class="news"/>
-    <br>
-    <a href="https://issuu.com/sophiazhang2" target="_blank"><button type="button">Learn More</button></a>
-  </div>
-  </div>
-</div>
-
 
 
 <div class="footer">
