--- a/design.html
+++ b/design.html
@@ -35,21 +35,47 @@
   <strong>Adobe Creative Cloud:</strong> photoshop, lightroom, illustrator, indesign
 </div>
 
+<div class="row2">
+    <div class="box box5">
+    <h3> Guac Travel Magazine </h3>
+    <em>Spring 2019</em>
+    <p><strong>Description:</strong>Was a Digital Designer, redesigned the current website.</p>
+    <h3>User Research</h3>
+        <p> The current website was not user-friendly because it did not contain any Information
+        about the actual travel magazine, and only provided links to Medium. Additionally, the aesthetic
+        of the website did not match the aesthetic of the actual magazine, which I feel is confusing for
+        the reader of the magazines.</p>
+    <div class=images>
+        <img src="images/guac/1.jpg" alt="guac_page" class="news1"/>
+        <img src="images/guac/2,jpg" alt="guac_page" class="news1"/>
+        <img src="images/guac/3.jpg" alt="guac_page" class="news1"/>
+        <img src="images/guac/4.jpg" alt="guac_page" class="news1"/>
+        <img src="images/guac/5.jpg" alt="guac_page" class="news1"/>
+        <img src="images/guac/6.jpg" alt="guac_page" class="news1"/>
+        <img src="images/guac/7.jpg" alt="guac_page" class="news1"/>
+    </div>
+    </div>
+</div>
 
 <div class="row2">
     <div class="box box5">
     <h3>INFO 2300: Intermediate Design and Programming for the Web </h3>
     <em>Spring 2019</em>
     <p><strong>Description:</strong>Learned PHP and SQL. </p>
-    <p><strong>Project 1:</strong> Created a website about Flushing, Queens, my hometown. </p>
+    <p><strong>Project 1 & 3:</strong> Created a website about Flushing, Queens, my hometown. </p>
     <h3>User Research</h3>
-        <p> </p>
+        <p>Wanted to create a website about Flushing that was geared towards young Asian-Americans, as
+        well as tourists who weren't sure of where to explore and eat in Flushing, since it is a predominantly
+        Asian American community. Added a database with seed data.</p>
     <div class=images>
         <img src="images/flushing1.jpg" alt="flushing_webpage" class="news1"/>
         <img src="images/flushing2.jpg" alt="flushing_webpage" class="news1"/>
         <img src="images/flushing3.jpg" alt="flushing_webpage" class="news1"/>
+        <img src="images/flushing4.jpg" alt="flushing_webpage" class="news1"/>
+        <img src="images/flushing5.jpg" alt="flushing_webpage" class="news1"/>
+        <img src="images/flushing6.jpg" alt="flushing_webpage" class="news1"/>
     </div>
-</div>
+    </div>
 </div>
 
 <div class="row2">
