--- a/design.html
+++ b/design.html
@@ -32,7 +32,9 @@
 </div>
 
 <div class="art">
-  <strong>Adobe Creative Cloud:</strong> photoshop, lightroom, illustrator, indesign
+  <p><strong>Adobe Creative Cloud:</strong> photoshop, lightroom, illustrator, indesign</p>
+  <p><strong>Languages:</strong> HTML, CSS, PHP, SQL, Python, Matlab </p>
+
 </div>
 
 <div class="row2">
