--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     <h2 class="and"> and I design to innovate.</h2>
     <p class="intro">
       Majoring in <mark> Information Science </mark> with a focus on interactive technologies, I seek opportunities within the <strong> intersection </strong> of medicine,  technology, and design.
+      Currently located in Shanghai, China at Shanghaitech University - researching the intersection of Artificial
+      intelligence and healthcare.
     </p>
   </div>
 </div>
