--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <div class="row top">
     <div>
-      <a href="index.html"><img src="images/S.png" alt="logo" class="logo"/></a>
+      <a href="index.html">S O P H I A Z H A N G</a>
     </div>
 
     <div class="box box1">
@@ -27,6 +27,12 @@
       </nav>
     </div>
   </div>
+
+
+<div class="row">
+
+</div>
+
 
 
 <div class="row first-row">
