new index.html changes

--- a/index.html
+++ b/index.html
@@ -10,18 +10,15 @@
 <body>
 
   <div class="row top">
-    <div>
+    <div class="logo">
       <a href="index.html">S O P H I A Z H A N G</a>
     </div>
 
     <div class="box box1">
       <nav>
         <ul>
-          <li><a class="active" href="index.html">home</a></li>
+          <li><a class="active" href="index.html">portfolio</a></li>
           <li><a href="aboutme.html">about</a></li>
-          <li><a href="projects.html">research</a></li>
-          <li><a href="art.html">art</a></li>
-          <li><a href="design.html">design</a></li>
           <li><a href="contact.html">contact</a></li>
         </ul>
       </nav>
@@ -29,27 +26,13 @@
   </div>
 
 
-<div class="row">
-
+<div id="index_panel">
+    <a href="ux.html"><div class="index_panel_element ux"><p><span style="background-color:#fffb96">UX PROJECTS</span></p></div></a>
+    <a href="design.html"><div class="index_panel_element design"><p><span style="background-color:#fffb96">DESIGN WORK</span></p></div></a>
+    <a href="art.html"><div class="index_panel_element art"><p><span style="background-color:#fffb96">ART WORK</span></p></div></a>
+    <a href="projects.html"><div class="index_panel_element projects"><p><span style="background-color:#fffb96">RESEARCH</span></p></div></a>
 </div>
 
-
-
-<div class="row first-row">
-  <div class="box box2">
-    <img src="images/blue.jpg" alt="profile" class= "profile"/>
-  </div>
-
-  <div class="box box3">
-    <h1 id="myname"> My name is Sophia Zhang </h1>
-    <h2 class="and"> and I design to innovate.</h2>
-    <p class="intro">
-      Majoring in <mark> Information Science </mark> with a focus on interactive technologies, I seek opportunities within the <strong> intersection </strong> of medicine,  technology, and design.
-      Currently located in Shanghai, China at Shanghaitech University - researching the intersection of Artificial
-      intelligence and healthcare.
-    </p>
-  </div>
-</div>
 
 <div class="footer">
   <p class="email">
