--- a/aboutme.html
+++ b/aboutme.html
@@ -9,26 +9,19 @@
 
 <body>
   <div class="row top">
-    <div>
-       <a href="index.html"><img src="images/S.png" alt="logo" class="logo"/></a>
+    <div class=logo>
+       <a href="index.html">S O P H I A Z H A N G</a>
+       <p id=infosci> INFORMATION SCIENCE STUDENT</p>
     </div>
 
   <div class="box box1">
   <nav>
     <ul>
-          <li><a href="index.html">home</a></li>
+          <li><a href="index.html">portfolio</a></li>
           <li><a class="active" href="aboutme.html">about</a></li>
-          <li><a href="projects.html">research</a></li>
-          <li><a href="art.html">art</a></li>
-          <li><a href="design.html">design</a></li>
-          <li><a href="contact.html">contact</a></li>
     </ul>
   </nav>
   </div>
-</div>
-
-<div class="first-row">
-  <h1>about me</h1>
 </div>
 
 <div class="row1">
@@ -37,14 +30,23 @@
 </div>
 
 <div class="para">
+  <h2>Hi, I'm Sophia!</h2>
   <p>
-    From New York City, I currently attend Cornell University as an <mark>Information Science major</mark>, on the <mark>Pre-Medicine</mark> track.
+    From New York City, I am a current junior at Cornell University pursuing
+    a Bachelor of Science degree with a major in Information Science, on the Pre-Medicine track.
+    As I adopt innovative design thinking and comprehend the intricacies of global health and medicine,
+    I hope to meet the outdated aspects of health with the nuances of technology and design and provide
+    a fresh perspective towards approaching medical problems.
+</p>
+  <p>
+    I like challenges. With experience in research and laboratory work, in addition to my
+    design course work, I offer an original skillset. I am not afraid to challenge what
+    what is offered on the table, to pursue and advance alternate options and ideas. I love
+    diverse opinions, and creative thinking.
   </p>
   <p>
-    Interested in both medicine and biotechnology, I have experience in research and laboratory work. I currently work in the <mark>Cognitive Neuroscience Lab</mark> at Cornell and as a research intern in the laryngology department of Weill Cornell of Medicine. I am currently working with an larynologist on developing a <mark>cost-effective</mark> medical device for patients in low-resource countries.
-  </p>
-  <p>
-    I design with purpose. I have experience with InDesign, Photoshop, Lightroom, and Illustrator. Within the Information Science major, I plan on concentrating in user experience.
+    I design with purpose. I plan on concentrating within the Information Science major
+    on User Experience, because I believe the emphasis on the user allows for successful design.
   </p>
 </div>
 </div>
@@ -52,8 +54,7 @@
 
 <div class="footer">
   <p class="email">
-    <a href="mailto:sjz35@cornel.edu" target="_blank"><img class="icon" src="images/email.png" alt="email"/></a>
-    <a href="https://www.linkedin.com/in/zsophia" target="_blank"><img class="icon" src="images/linked.png" alt="linked"/></a>
+        SOPHIA ZHANG | SJZ35@CORNELL.EDU | <a href="https://www.linkedin.com/in/zsophia" target="_blank"><img class="icon" src="images/linked.png" alt="linked"/></a>
   </p>
 </div>
 
