--- a/design.html
+++ b/design.html
@@ -9,19 +9,20 @@
 </head>
 <body>
   <div class="row top">
-    <div>
-       <a href="index.html"><img src="images/S.png" alt="logo" class="logo"/></a>
+    <div class=logo>
+        <a href="index.html">S O P H I A Z H A N G</a>
+        <p id=infosci> INFORMATION SCIENCE STUDENT</p>
     </div>
 
   <div class="box box1">
       <nav>
         <ul>
-            <li><a href="index.html">home</a></li>
+            <li><a href="index.html">portfolio</a></li>
             <li><a href="aboutme.html">about</a></li>
-            <li><a href="projects.html">research</a></li>
-            <li><a href="art.html">art</a></li>
+            <li><a href="ux.html">ux projects</a></li>
             <li><a class="active" href="design.html">design</a></li>
-            <li><a href="contact.html">contact</a></li>
+            <li><a href="art.html">art</a></li>
+            <li><a href="projects.html">research</a></li>
         </ul>
       </nav>
     </div>
@@ -70,12 +71,12 @@
         well as tourists who weren't sure of where to explore and eat in Flushing, since it is a predominantly
         Asian American community. Added a database with seed data.</p>
     <div class=images>
-        <img src="images/flushing1.jpg" alt="flushing_webpage" class="news1"/>
-        <img src="images/flushing2.jpg" alt="flushing_webpage" class="news1"/>
-        <img src="images/flushing3.jpg" alt="flushing_webpage" class="news1"/>
-        <img src="images/flushing4.jpg" alt="flushing_webpage" class="news1"/>
-        <img src="images/flushing5.jpg" alt="flushing_webpage" class="news1"/>
-        <img src="images/flushing6.jpg" alt="flushing_webpage" class="news1"/>
+        <img src="images/design/flushing1.jpg" alt="flushing_webpage" class="news1"/>
+        <img src="images/design/flushing2.jpg" alt="flushing_webpage" class="news1"/>
+        <img src="images/design/flushing3.jpg" alt="flushing_webpage" class="news1"/>
+        <img src="images/design/flushing4.jpg" alt="flushing_webpage" class="news1"/>
+        <img src="images/design/flushing5.jpg" alt="flushing_webpage" class="news1"/>
+        <img src="images/design/flushing6.jpg" alt="flushing_webpage" class="news1"/>
     </div>
     </div>
 </div>
@@ -134,25 +135,10 @@
   </div>
 </div>
 
-<div class="row2">
-  <div class="box box5">
-  <h3>Hunter Key Club Publicity</h3>
-    <em>September 2015 - May 2016 </em><br>
-    <p><strong>Description:</strong>I was in charge of the publicity materials for Key Club, an international volunteering organization, in high school.<br></p>
-    <div class=images>
-      <img src="images/keyclub/cover2.png" alt="keyclub" class="news"/>
-      <img src="images/keyclub/facultyfeud.png" alt="keyclub" class="news"/>
-      <img src="images/keyclub/cover.png" alt="keyclub" class="news"/>
-      <img src="images/keyclub/poster.png" alt="keyclub" class="news"/>
-    </div>
-  </div>
-</div>
-
 
 <div class="footer">
   <p class="email">
-    <a href="mailto:sjz35@cornel.edu" target="_blank"><img class="icon" src="images/email.png" alt="email"/></a>
-    <a href="https://www.linkedin.com/in/zsophia" target="_blank"><img class="icon" src="images/linked.png" alt="linked"/></a>
+    SOPHIA ZHANG | SJZ35@CORNELL.EDU | <a href="https://www.linkedin.com/in/zsophia" target="_blank"><img class="icon" src="images/linked.png" alt="linked"/></a>
   </p>
 </div>
 
