--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div class="row top">
     <div class="logo">
       <a href="index.html">S O P H I A Z H A N G</a>
+      <p id=infosci> INFORMATION SCIENCE STUDENT</p>
     </div>
 
     <div class="box box1">
@@ -19,7 +20,6 @@
         <ul>
           <li><a class="active" href="index.html">portfolio</a></li>
           <li><a href="aboutme.html">about</a></li>
-          <li><a href="contact.html">contact</a></li>
         </ul>
       </nav>
     </div>
@@ -29,16 +29,14 @@
 <div id="index_panel">
     <a href="ux.html"><div class="index_panel_element ux"><p><span style="background-color:#fffb96">UX PROJECTS</span></p></div></a>
     <a href="design.html"><div class="index_panel_element design"><p><span style="background-color:#fffb96">DESIGN WORK</span></p></div></a>
-    <a href="art.html"><div class="index_panel_element art"><p><span style="background-color:#fffb96">ART WORK</span></p></div></a>
+    <a href="art.html"><div class="index_panel_element artcover"><p><span style="background-color:#fffb96">ART WORK</span></p></div></a>
     <a href="projects.html"><div class="index_panel_element projects"><p><span style="background-color:#fffb96">RESEARCH</span></p></div></a>
 </div>
 
 
 <div class="footer">
   <p class="email">
-    <a href="mailto:sjz35@cornel.edu" target="_blank"><img class="icon" src="images/email.png" alt="email"/></a>
-    <a href="https://www.linkedin.com/in/zsophia" target="_blank"><img class="icon" src="images/linked.png" alt="linked"/></a>
-  </p>
+        SOPHIA ZHANG | SJZ35@CORNELL.EDU | <a href="https://www.linkedin.com/in/zsophia" target="_blank"><img class="icon" src="images/linked.png" alt="linked"/></a>
 </div>
 
 </body>
