--- a/art.html
+++ b/art.html
@@ -11,19 +11,20 @@
 </head>
 <body>
   <div class="row top">
-    <div>
-       <a href="index.html"><img src="images/S.png" alt="logo" class="logo"/></a>
+    <div class=logo>
+        <a href="index.html">S O P H I A Z H A N G</a>
+        <p id=infosci> INFORMATION SCIENCE STUDENT</p>
     </div>
 
   <div class="box box1">
       <nav>
         <ul>
-            <li><a href="index.html">home</a></li>
+            <li><a href="index.html">portfolio</a></li>
             <li><a href="aboutme.html">about</a></li>
-            <li><a href="projects.html">research</a></li>
-            <li><a class="active" href="art.html">art</a></li>
+            <li><a href="ux.html">ux projects</a></li>
             <li><a href="design.html">design</a></li>
-            <li><a href="contact.html">contact</a></li>
+            <li><a class="active" href="art.html">art</a></li>
+            <li><a href="projects.html">research</a></li>
         </ul>
       </nav>
     </div>
@@ -45,7 +46,7 @@
     <em>September 2016 - May 2017 </em><br>
     <p><strong>Description:</strong> In senior year of high school, I submitted an art portfolio that showcased my 2-D skills.
         Half of the pieces focused on breadth, and the other half focused on a central theme. I wanted my pieces embody my Asian
-        American experience by creating pieces that I eat in my everyday life. It is difficult as a <mark>Chinese American</mark>
+        American experience by creating pieces that I eat in my everyday life. It is difficult as a Chinese American
         to fully understand my identity because it is easy to feel like an outsider in America and China. The presence of staples
         to life, such as food, shows that culture and ethnicity is evolving to encompass those who belong to more than one nationality.
          To the right are a couple of pieces from the portfolio.<br></p>
@@ -70,8 +71,7 @@
 
 <div class="footer">
   <p class="email">
-    <a href="mailto:sjz35@cornel.edu" target="_blank"><img class="icon" src="images/email.png" alt="email"/></a>
-    <a href="https://www.linkedin.com/in/zsophia" target="_blank"><img class="icon" src="images/linked.png" alt="linked"/></a>
+        SOPHIA ZHANG | SJZ35@CORNELL.EDU | <a href="https://www.linkedin.com/in/zsophia" target="_blank"><img class="icon" src="images/linked.png" alt="linked"/></a>
   </p>
 </div>
 
