--- a/projects.html
+++ b/projects.html
@@ -9,19 +9,20 @@
 <body>
 
   <div class="row top">
-    <div>
-       <a href="index.html"><img src="images/S.png" alt="logo" class="logo"/></a>
+    <div class=logo>
+        <a href="index.html">S O P H I A Z H A N G</a>
+        <p id=infosci> INFORMATION SCIENCE STUDENT</p>
     </div>
 
     <div class="box box1">
       <nav>
         <ul>
-            <li><a href="index.html">home</a></li>
+            <li><a href="index.html">portfolio</a></li>
             <li><a href="aboutme.html">about</a></li>
-            <li><a class="active" href="projects.html">research</a></li>
-            <li><a href="art.html">art</a></li>
+            <li><a href="ux.html">ux projects</a></li>
             <li><a href="design.html">design</a></li>
-            <li><a href="contact.html">contact</a></li>
+            <li><a href="art.html">art</a></li>
+            <li><a class="active" href="projects.html">research</a></li>
         </ul>
       </nav>
     </div>
@@ -131,8 +132,7 @@
 
 <div class="footer">
   <p class="email">
-    <a href="mailto:sjz35@cornel.edu" target="_blank"><img class="icon" src="images/email.png" alt="email"/></a>
-    <a href="https://www.linkedin.com/in/zsophia" target="_blank"><img class="icon" src="images/linked.png" alt="linked"/></a>
+        SOPHIA ZHANG | SJZ35@CORNELL.EDU | <a href="https://www.linkedin.com/in/zsophia" target="_blank"><img class="icon" src="images/linked.png" alt="linked"/></a>
   </p>
 </div>
 
