--- a/aboutme.html
+++ b/aboutme.html
@@ -30,6 +30,7 @@
 </div>
 
 <div class="para">
+<h1> ABOUT ME <h1>
   <h2>Hi, I'm Sophia!</h2>
   <p>
     From New York City, I am a current junior at Cornell University pursuing
