--- a/ux.html
+++ b/ux.html
@@ -31,7 +31,34 @@
 
 <h1>ux projects</h1>
 
+<div class="art">
+  <p><strong>Software:</strong> Balsamiq for mid-fidelity, Figma for high fidelty</p>
+</div>
 
+<div class="row2">
+    <div class="box box5">
+    <h3> Hinder: Find Your Perfect Housing Match! </h3>
+    <em>Fall 2019</em>
+    <p><strong>Description:</strong> Took Human Computer Interaction (HCI) and participated in a semester-long project
+    with three other group members. </p>
+    <h3>Problem</h3>
+        <p> Due to the lack of resources regarding off-campus housing options,
+            many Cornell students have had very stressful and unpleasant experiences
+            with the housing search process. This has resulted in dissatisfied living
+            situations and unnecessary burdens on students. </p>
+    <h3>Goal</h3>
+        <p>The goal is to improve the housing situation for Cornell students by
+            providing resources for students who do not have housing, who cannot
+            afford housing on campus, and who did poorly in the housing lottery. </p>
+    <h3>Persona: Matt</h3>
+        <p>Based on interviews with students who are struggling to find housing on
+            Cornell campus, we developed a persona that encompasses the ideal
+            user to our product. End goals for Matt: Understand available housing options,
+            Settle on a living situation that maximizes productivity & has a beneficial impact on his wellbeing.</p>
+    <h3>High-fidelity on Figma</h3>
+
+    </div>
+</div>
 
 
 
