--- a/ux.html
+++ b/ux.html
@@ -56,7 +56,9 @@
             user to our product. End goals for Matt: Understand available housing options,
             Settle on a living situation that maximizes productivity & has a beneficial impact on his wellbeing.</p>
     <h3>High-fidelity on Figma</h3>
-
+        <div class="box box5">
+            <img src="images/hinder/Poster.jpg" alt="hinder image"/>
+        </div>
     </div>
 </div>
 
