--- a/ux.html
+++ b/ux.html
@@ -36,7 +36,7 @@
 </div>
 
 <div class="row2">
-    <div class="box box5">
+    <div class="box">
     <h3> Hinder: Find Your Perfect Housing Match! </h3>
     <em>Fall 2019</em>
     <p><strong>Description:</strong> Took Human Computer Interaction (HCI) and participated in a semester-long project
