--- a/design.html
+++ b/design.html
@@ -38,7 +38,7 @@
 </div>
 
 <div class="row2">
-    <div class="box box5">
+    <div class="box">
     <h3> Guac Travel Magazine </h3>
     <em>Spring 2019</em>
     <p><strong>Description:</strong> Was a Digital Designer, redesigned the current website.</p>
@@ -61,7 +61,7 @@
 </div>
 
 <div class="row2">
-    <div class="box box5">
+    <div class="box">
     <h3>INFO 2300: Intermediate Design and Programming for the Web </h3>
     <em>Spring 2019</em>
     <p><strong>Description: </strong>Learned PHP and SQL. </p>
@@ -82,7 +82,7 @@
 </div>
 
 <div class="row2">
-  <div class="box box5">
+  <div class="box">
   <h3>INFO 1300: Introduction to Web Design </h3>
     <em>Fall 2018</em>
     <p><strong>Description:</strong> Learned HTML, CSS, and Javascript. Learned how to design websites with target audiences. </p>
@@ -123,7 +123,7 @@
 </div>
 
 <div class=row2>
-  <div class="box box5">
+  <div class="box">
     <h3>Hans Bethe House Office Assistant</h3>
       <em>Fall 2018 - Present</em>
       <p><strong>Description:</strong> Create posters and whiteboards for the ongoing events that happen at the house.</p>
