--- a/aboutme.html
+++ b/aboutme.html
@@ -26,7 +26,7 @@
 
 <div class="row1">
 <div class="photo">
-  <img src="images/squares.jpg" alt="bridge" class="squares"/>
+  <img src="images/profile.JPG" alt="bridge" class="squares"/>
 </div>
 
 <div class="para">
