--- a/ux.html
+++ b/ux.html
@@ -37,10 +37,102 @@
 
 <div class="row2">
     <div class="box">
+    <h3>Omnia: Mental Health Tracked backed by Blockchain </h3>
+    <em>Summer 2020</em><br>
+    <p></p>
+    <div class="a"><a href="https://drive.google.com/file/d/1NA_5G_hLX_Mq0ZhH1c9Kh80V3F8diXxF/view" target="_blank">
+        <button type="button" class="button">Pitch Deck</button></a></div>
+    <p><strong>Description:</strong> Participated in Origin, an entrepreneurship bootcamp
+        for college students, and attended lectures by key speakers from start-ups and technical
+        companies. Co-Founder of Omnia, a mental health start-up that focuses on providing holistic
+        and affordable healthcare for university students, and designed the UI of the mobile application,
+        as well as the pitch deck.
+    </p>
+    <h3>Persona</h3>
+        <div class="a"> <img src="images/uxprojects/omnia/fatimapersona.jpg" alt="fatima" class="box6"/></div>
+
+    <h3>Problem</h3>
+        <p> College students lack access to affordable mental health-related preventative
+        care, especially for underserved populations. </p>
+    <h3>Solution</h3>
+        <p> The problem is that many college students, like Fatima, lack a way to continuously
+            care for their mental well-being on a daily basis. Our solution is Omnia, a personal,
+            private mental health tracker that is connected with a therapist or psychologist at a
+            student’s college or university. Students can add a journal entry, record their mood,
+            and connect with their therapist. </p>
+    <h3>High-fidelity Prototype on Figma</h3>
+        <div class="a"><img src="images/uxprojects/omnia/figma.jpg" alt=" " class="box6"/></div>
+        <br><p></p>
+        <div class="a"><a href="https://www.figma.com/proto/WHFJ9zmHpmp6siXAKgoSWM/Omnia-Designs?node-id=0%3A3&scaling=scale-down" target="_blank">
+            <button type="button" class="button">Figma Prototype</button></a></div>
+    </div>
+</div>
+
+
+<div class="row2">
+    <div class="box">
+    <h3>Cayuga Health Partners (CHP) Community-based Organizations (CBO) Web Interface</h3>
+    <em>Summer 2020</em>
+    <p><strong>Description:</strong> Based on the social determinants of health, I worked with physicians at
+        Cayuga Medical Center, students at Cornell University Masters of Public Health, members of Cornell
+        Health Equity, and the IT department of CHP to design a search engine for community-based organizations (CBO) in Tompkins County.
+        This website would allow physicians to search through these CBOs and refer their patients to each of them,
+        as well as patients to search through these organizations on their own.
+    </p>
+    <h3>Problem</h3>
+        <p> The only CBO search engine available for physicians and patients was the 2-1-1 page for Tompkins County.
+        The existing web page is difficult to navigate through and outdated. There is no webpage that
+        consolidates all the CBOs.</p>
+    <h3>Goal</h3>
+        <p> To design a search engine that is minimalistic and patient-centered. Contain appropriate filters
+        for both the physicians and patients to use. </p>
+    <h3>Process</h3>
+        <p>I researched the different sectors of social determinants of health and applied the most
+        relevant ones to Tompkins County. I interviewed physicians about how they would like to use the site
+        to refer their patients. I worked with the IT department to create a cohesive site. </p>
+    <h3>High-fidelity Prototype on Figma</h3>
+        <div class="a"><img src="images/uxprojects/chp/Main Page.png" alt="CHP main page" class="box6"/></div>
+        <div class="a"><img src="images/uxprojects/chp/Category Filters.png" alt="CHP category filters" class="box6"/></div>
+        <div class="a"><img src="images/uxprojects/chp/Food Page.png" alt="CHP food page" class="box6"/></div>
+        <div class="a"><img src="images/uxprojects/chp/Personal Filters.png" alt="CHP personal filters" class="box6"/></div>
+        <br><p></p>
+        <div class="a"><a href="https://www.figma.com/proto/iuuVmR6CJT70TICHCjNCuU/CBO-web-interface?node-id=0%3A3&scaling=scale-down-width" target="_blank">
+            <button type="button" class="button">Figma Prototype</button></a></div>
+    </div>
+</div>
+
+<div class="row2">
+    <div class="box">
+    <h3>Cayuga Health Partners (CHP) Website Redesign</h3>
+    <em>Summer 2020</em>
+    <p><strong>Description:</strong> Worked with the IT department of CHP to redesign the current
+        website based on patient-centered preferences and existing medical center sites.
+    </p>
+    <h3>Problem</h3>
+        <p> The existing CHP website is not user-friendly and difficult to navigate through. It
+        vioates many UX and design principles. </p>
+    <h3>Goal</h3>
+        <p> To use the existing website designs and create a user-friendly interface. </p>
+    <h3>High-fidelity Prototype on Figma</h3>
+        <div class="a"><img src="images/uxprojects/chp/Home Page.png" alt="CHP home page" class="box6"/></div>
+        <br><p></p>
+        <div class="a"><a href="https://www.figma.com/proto/13iKxcN1X9caXlRG5t6MM1/CHP-Website?node-id=3%3A16&scaling=scale-down-width" target="_blank">
+            <button type="button" class="button">Figma Prototype</button></a></div>
+    </div>
+</div>
+
+
+<div class="row2">
+    <div class="box">
     <h3> Hinder: Find Your Perfect Housing Match! </h3>
     <em>Fall 2019</em>
     <p><strong>Description:</strong> Took Human Computer Interaction (HCI) and participated in a semester-long project
     with three other group members. </p>
+    <h3>Persona: Matt</h3>
+        <p>Based on interviews with students who are struggling to find housing on
+            Cornell campus, we developed a persona that encompasses the ideal
+            user to our product. End goals for Matt: Understand available housing options,
+            Settle on a living situation that maximizes productivity & has a beneficial impact on his wellbeing.</p>
     <h3>Problem</h3>
         <p> Due to the lack of resources regarding off-campus housing options,
             many Cornell students have had very stressful and unpleasant experiences
@@ -50,13 +142,11 @@
         <p>The goal is to improve the housing situation for Cornell students by
             providing resources for students who do not have housing, who cannot
             afford housing on campus, and who did poorly in the housing lottery. </p>
-    <h3>Persona: Matt</h3>
-        <p>Based on interviews with students who are struggling to find housing on
-            Cornell campus, we developed a persona that encompasses the ideal
-            user to our product. End goals for Matt: Understand available housing options,
-            Settle on a living situation that maximizes productivity & has a beneficial impact on his wellbeing.</p>
-    <h3>High-fidelity on Figma</h3>
-        <img src="images/hinder/Poster.jpg" alt="hinder image" class="box5"/>
+    <h3>High-fidelity Prototype on Figma</h3>
+        <div class="a"><img src="images/hinder/Poster.jpg" alt="hinder image" class="box5"/></div>
+    <br><p></p>
+        <div class="a"><a href="https://www.figma.com/proto/7FaLStRNzFSAKwsu7k4HT9/Mobile-App?node-id=10%3A3&scaling=scale-down" target="_blank">
+            <button type="button" class="button">Figma Prototype</button></a></div>
     </div>
 </div>
 
